fix: wrap title in forms instead of overflow when it's too long

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,10 @@ header nav {
   min-height: 500px;
 }
 
+.title-wrapper {
+  word-wrap: break-word;
+}
+
 .create_panel {
   background: rgba(0, 0, 0, 0.9);
   color: #ffffff;
